ircv3_parse_derive/tests/ui/de/fail/invalid_param_index.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
struct M {
    #[irc(param = "first")]
    field: String,
}

fn main() {}
