ircv3_parse_derive/tests/ui/de/fail/invalid_param_index.stderr
error: expected integer literal
 --> tests/ui/de/fail/invalid_param_index.rs:5:19
  |
5 |     #[irc(param = "first")]
  |                   ^^^^^^^
